[project]
name = "fastapi-hello-world"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "gunicorn>=21.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
